--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~7.0.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.1",
     "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^7.0.0",
     "@ngrx/store": "^7.0.0",
     "angular-font-awesome": "^3.1.2",
     "core-js": "^2.5.4",
