--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngrx/effects": "^7.0.0",
     "@ngrx/router-store": "^7.0.0",
     "@ngrx/store": "^7.0.0",
+    "@ngrx/entity": "^7.0.0",
     "@ngrx/store-devtools": "^7.0.0",
     "angular-font-awesome": "^3.1.2",
     "core-js": "^2.5.4",
