--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "accountant-portal": {
+    "iSave-portal": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -62,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "accountant-portal:build"
+            "browserTarget": "iSave-portal:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "accountant-portal:build:production"
+              "browserTarget": "iSave-portal:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "accountant-portal:build"
+            "browserTarget": "iSave-portal:build"
           }
         },
         "test": {
@@ -108,7 +108,7 @@
         }
       }
     },
-    "accountant-portal-e2e": {
+    "iSave-portal-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -117,11 +117,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "accountant-portal:serve"
+            "devServerTarget": "iSave-portal:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "accountant-portal:serve:production"
+              "devServerTarget": "iSave-portal:serve:production"
             }
           }
         },
@@ -137,5 +137,5 @@
       }
     }
   },
-  "defaultProject": "accountant-portal"
+  "defaultProject": "iSave-portal"
 }
