--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
     "@ng-bootstrap/ng-bootstrap": "^4.0.1",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^7.0.0",
+    "@ngrx/entity": "^7.0.0",
     "@ngrx/router-store": "^7.0.0",
     "@ngrx/store": "^7.0.0",
-    "@ngrx/entity": "^7.0.0",
     "@ngrx/store-devtools": "^7.0.0",
     "angular-font-awesome": "^3.1.2",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
